[tool.poetry]
name = "youtube-to-mp3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pandas-datareader = "^0.10.0"
pandas-ta = "^0.3.14b0"
pytubefix = "^6.13.0"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
